--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.10.6"
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security",
+    "node": "^21.2.0"
   }
 }
